--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ openai = "^1.3.3"
 fastapi = "^0.104.1"
 uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 python-dotenv = "^1.0.0"
+pydantic = "^2.5.2"
 
 
 [build-system]
